<?xml version="1.0" encoding="utf-8"?>
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/drive_ride"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/brightGreen"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">
                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"

                        android:clickable="true"
                        app:civ_border_width="3dp"
                        app:civ_border_color="#FFFFFFFF"

                        android:id="@+id/profile"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_below="@+id/header_cover_image"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="-19dp"
                        android:layout_marginLeft="-18dp"
                        android:elevation="5dp"
                        android:padding="20dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/man" />
                    <TextView
                        android:id="@+id/driver_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:layout_gravity="center"
                        android:textColor="#000"
                        android:textSize="20sp" />
                    <TextView
                        android:id="@+id/isDriving"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:layout_gravity="center"
                        android:text="@string/isRiding"
                        android:textColor="#000"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/label_from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/ride_from"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                    <TextView
                        android:id="@+id/text_from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/label_where"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/ride_where"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                    <TextView
                        android:id="@+id/text_where"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/label_when"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/ride_Time"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/text_when"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/buttonPanel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarStyle">
                <Button
                    android:id="@+id/request_button"
                    android:layout_width="110dp"
                    android:layout_height="50dp"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_marginRight="130dp"
                    android:backgroundTint="@android:color/holo_orange_dark"
                    android:layout_marginLeft="16dp" />
                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="110dp"
                    android:layout_height="50dp"
                    android:text="@string/ride_cancel"
                    android:backgroundTint="@android:color/holo_red_light"
                    style="?android:attr/buttonBarButtonStyle"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>